ghc-4335c07/testsuite/tests/deriving/should_fail/drvfail008.hs
-- Should fail without GeneralizedNewtypeDeriving
-- Succeeds with GeneralizedNewtypeDeriving

module ShouldFail where

import Control.Monad.State

data S = S Int

newtype M a = M (StateT S IO a) deriving( Monad )




