ghc-4335c07/testsuite/tests/deriving/should_fail/drvfail008.stderr

drvfail008.hs:10:43: error:
    • Can't make a derived instance of ‘Monad M’:
        ‘Monad’ is not a stock derivable class (Eq, Show, etc.)
        Try GeneralizedNewtypeDeriving for GHC's newtype-deriving extension
    • In the newtype declaration for ‘M’
